objects/IS_Process__c.object
<CustomObject>
    <fields>
        <fullName>Frequence__c</fullName>
        <label>zzzFrequence</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>zzzProcess Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>zzzServer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Other_Notes__c</fullName>
        <label>zzzTime/Other Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>zzzIS Process</label>
    <nameField>
        <label>IS Processes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zzzIS Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>